# kyde

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  ThirdPartyNotices.txt  build.rs  deny.toml  release-please-config.json  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cargo-deny.yml  release.yml
assets/: AppIcon.icns
assets/icons/: LICENSE
docs/: index.html
scripts/: bundle-linux.sh  bundle-macos.sh  gen_lock.py  make-icon.sh  screenshots.sh  test-update.sh  winid.swift
src/: app.rs  clipboard.rs  diff.rs  git.rs  highlight.rs  keymap.rs  main.rs  markdown.rs  mdview.rs  plugins.rs  projects.rs  remote_img.rs  render.rs  scratch.rs  shellcmd.rs  terminal.rs  theme.rs  tree.rs  update.rs
src/editor/: element.rs  mod.rs
