[package]
name = "kyde"
version = "1.0.0"
edition = "2021"
description = "Fast native macOS git commit/diff tool, IDE-style, built on gpui"
license = "Apache-2.0"
repository = "https://github.com/kyle-ssg/Kyde"

[dependencies]
# GUI — Zed's framework. Apache-2.0. API moves fast; pin once it builds.
gpui = "0.2"

# Diff computation — word/char/line, Apache-2.0. (Swap to imara-diff later if big files lag.)
similar = { version = "3", features = ["unicode", "inline"] }

# Syntax highlighting — tree-sitter, like Zed. Grammar crate versions must align
# with the tree-sitter core version; if cargo complains, bump them together.
# Each grammar is OPTIONAL and gated behind a per-pack feature (see [features]),
# so a build can ship only the grammars it wants — an absent grammar's parse
# tables leave the binary entirely (real size/RAM win), and at runtime its lang
# collapses to the existing "no pack → PlainText" path. `default = ["full"]`
# keeps the normal `cargo build` shipping everything, exactly as before.
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-md = { version = "0.5", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-css = { version = "0.25", optional = true }

# Fuzzy file search (Go to File)
fuzzy-matcher = "0.3"

# Misc
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
# Parse a .ttf/.otf's family name so opened font files preview in their own typeface.
ttf-parser = "0.25"
# Markdown → rendered side-by-side preview (the markdown plugin).
pulldown-cmark = { version = "0.13", default-features = false }
# Remote (http/https) images in the Markdown preview — OFF by default. Pulls a
# blocking HTTP+TLS stack (ureq → rustls), kept out of the default build to
# protect the footprint (see CONTRIBUTING.md). Local-file images need neither.
ureq = { version = "3", optional = true }
futures = { version = "0.3", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-toml-ng = { version = "0.7.0", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-r = { version = "1.3.0", optional = true }
# The official `tree-sitter-latex` 0.1.0 is unusable — it references an external
# scanner but ships no scanner.c, so it fails to link. Use latex-lsp's grammar
# (republished as `codebook-tree-sitter-latex`, MIT, ships scanner.c + tracks
# tree-sitter 0.25), aliased back to `tree_sitter_latex` for the code path. It
# bundles no highlights query either, so the pack uses LATEX_HIGHLIGHTS in
# highlight.rs.
tree-sitter-latex = { package = "codebook-tree-sitter-latex", version = "0.6.1", optional = true }
# Embedded terminal — alacritty's VTE/grid/PTY engine (Apache-2.0), same crate Zed uses.
# Gated behind the `terminal` Cargo feature so a build can drop it entirely: an off
# feature sheds the grammar-sized ~2MB of `.rodata` parse tables + the read-loop code,
# exactly like the language packs. `futures` provides the wakeup channel from the PTY
# read thread back to the gpui foreground.
alacritty_terminal = { version = "0.26.0", optional = true }

# Language packs — one feature per pack. A pack's feature pulls in its grammar
# crate(s); the matching match arms in highlight.rs are `#[cfg]`-gated to the
# same feature, so an off feature drops both the crate AND the code. `css`
# serves both CSS and SCSS; `typescript` serves both .ts and .tsx (one crate).
# `env`/`gitignore` use builtin line-highlighters (no grammar) and are always on.

# macOS dock icon at runtime (no .app bundle) — set via NSApplication. Versions match
# gpui's own objc2 deps so the ABI lines up.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSProcessInfo"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder", "NSPasteboard", "NSPasteboardItem"] }

# Embeds the app icon + version into kyde.exe at build time (see build.rs).
# Windows-only; nothing to compile on macOS/Linux.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# `test-support` exposes gpui's headless `TestAppContext` so we can run the real app
# (windows, entities, render cycle) in `cargo test` — the only way to catch runtime
# panics like re-entrant entity updates. Test build only.
[dev-dependencies]
gpui = { version = "0.2", features = ["test-support"] }

[features]
default = ["full", "terminal"]
full = [
    "rust", "typescript", "javascript", "json", "markdown",
    "shell", "css", "yaml", "toml", "python", "html", "go", "r", "latex",
]
# Embedded multi-tab terminal panel. Pulls alacritty's engine + the futures channel
# used to wake the UI on new PTY output. Drop with `--no-default-features` (or omit
# `terminal`) to ship a build with no terminal — ~2MB lighter, faster compile.
terminal = ["dep:alacritty_terminal", "dep:futures"]
# Remote http/https images in the Markdown preview. Deliberately NOT in `full` —
# it's a networking concern, not a language pack, and adds a TLS stack. Local-file
# images work without it. Build with: `cargo build --features remote-images`.
remote-images = ["dep:ureq", "dep:futures"]
rust = ["dep:tree-sitter-rust"]
# TS/TSX highlighting inherits the base ECMAScript rules from the JS grammar's
# query (tree-sitter-typescript ships only TS-specific additions), so the
# typescript pack pulls in the javascript grammar too.
typescript = ["dep:tree-sitter-typescript", "dep:tree-sitter-javascript"]
javascript = ["dep:tree-sitter-javascript"]
json = ["dep:tree-sitter-json"]
markdown = ["dep:tree-sitter-md"]
shell = ["dep:tree-sitter-bash"]
css = ["dep:tree-sitter-css"]
yaml = ["dep:tree-sitter-yaml"]
toml = ["dep:tree-sitter-toml-ng"]
python = ["dep:tree-sitter-python"]
html = ["dep:tree-sitter-html"]
go = ["dep:tree-sitter-go"]
r = ["dep:tree-sitter-r"]
# tree-sitter-latex ships no bundled highlights query, so the latex pack uses a
# small hand-written query (LATEX_HIGHLIGHTS in highlight.rs).
latex = ["dep:tree-sitter-latex"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1   # keep edit-rebuild snappy but not molasses
